--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,6 +15,12 @@ body {
   justify-content: center;
 }
 
+.icon, .close-button {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
 .modal {
   background: white;
   width: 480px;
@@ -44,7 +50,7 @@ body {
   height: 24px;
   width: 24px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
 }
 
